@@ -23,6 +23,9 @@
 # $Id$
 #
 # $Log$
+# Revision 1.28.2.2  2005/03/06 21:22:59  jimmyo
+# Better handling of broken connections (Deb#298108).
+#
 # Revision 1.28.2.1  2005/03/06 19:32:45  jimmyo
 # Make sure all rrd-tunes are correct after an upgrade (Deb#296454, Deb#296645).
 #
@@ -741,7 +744,7 @@ sub read_socket_single {
     return undef unless defined $socket;
 
     eval {
-      local $SIG{ALRM} = sub { $timed_out=1; close $socket; die "$!\n"};
+      local $SIG{ALRM} = sub { $timed_out=1; close $socket; exit 1;};
       alarm( $timeout );
       $res = <$socket>;
       chomp $res;
@@ -763,7 +766,7 @@ sub read_socket {
     return undef unless defined $socket;
 
     eval {
-      local $SIG{ALRM} = sub { $timed_out=1; close $socket; die "$!\n"};
+      local $SIG{ALRM} = sub { $timed_out=1; close $socket; exit 1;};
       alarm( $timeout );
       while (<$socket>) {
   	chomp;
@@ -845,6 +848,7 @@ sub config_node {
     return unless $socket;
     next unless (@lines);
     for (@lines) {
+      next unless defined $_;
       if (/\# timeout/) {
 	logger("Client reported timeout in configuration of $servname");
 	if ($oldnode->{client}->{$servname}) {
@@ -936,11 +940,13 @@ sub fetch_node {
     my $realservname = $node->{client}->{$service}->{realservname} || $service;
     delete $node->{client}->{$service}->{realservname}
 	if exists $node->{client}->{$service}->{realservname};
+    return 0 unless $socket;
     print $socket "fetch $realservname\n";
     my @lines = &read_socket($socket);
-    return unless $socket;
+    return 0 unless $socket;
     my $fields = {};
     for (@lines) {
+      next unless defined $_;
       if (/\# timeout/) {
 	logger("Client reported timeout in fetching of $service");
       }
@@ -974,6 +980,8 @@ sub fetch_node {
   $nodefetch_time = sprintf ("%.2f",(Time::HiRes::time - $nodefetch_time));
   logger ("Fetched node: $name ($nodefetch_time sec)");
   print STATS "FN|$domain|$name|$nodefetch_time\n";
+
+  return 1;
 }
 
 sub use_old_config
@@ -1002,10 +1010,10 @@ sub logger {
   my ($comment) = @_;
   my $now = strftime "%b %d %H:%M:%S", localtime;
 
-  print "$now - $comment\n" if $print_stdout;
+  print "$now - [$$] $comment\n" if $print_stdout;
   if ($log->opened)
   {
-	  print $log "$now - $comment\n";
+	  print $log "$now [$$] - $comment\n";
   }
   else
   {
